--- a/Public/Css/common.css
+++ b/Public/Css/common.css
@@ -158,7 +158,7 @@ div.nav A:hover{border-bottom:1px dotted; text-decoration:none; color:silver}
 .effect{background:#F1F1FA; width:300px; height:25px; border:1pt solid silver; text-align:center; font:normal normal normal 14px Tahoma}
 div.menu{float:left; width:90%; padding:5px 5px; margin:0px; text-align:left}
 
-div.content{padding:0; clear:both; float:left; width:100%; margin-top:5px; font-family:Verdana,Geneva,Arial,Helvetica,sans-serif}
+div.content{padding:0; clear:both; width:100%; margin-top:5px; font-family:Verdana,Geneva,Arial,Helvetica,sans-serif}
 
 div.operate{margin:8px 3px; float:left}
 
